--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ ul.details li{
 	display:inline-block;
 }
 .header-banner{
-	background: url("../images/header-banner.jpg") no-repeat;
+	background: url("../images/xiongwang.jpg") no-repeat;
 	min-height: 860px;
 	background-size: cover;
 	-webkit-background-size: cover;
